<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".presentation.ui.list.AttestationsFragment">

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/lbl_out_reasons" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/input_motif_pro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/lbl_motif_pro"
        app:useMaterialThemeColors="false" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/input_motif_courses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/lbl_motif_courses"
        app:useMaterialThemeColors="true" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/input_motif_soins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/lbl_motifs_soins" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/input_motif_famille"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/lbl_motifs_famille" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/input_motif_sport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/lbl_motifs_sport" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/input_motif_judiciaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/lbl_motifs_judiciaire" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/input_motif_interet_general"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/lbl_motifs_ig" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_validate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_validate"
        app:icon="@drawable/ic_check" />

</LinearLayout>